# LLPermission

./: .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
src/: Command.cpp  Data.cpp  Data.h  ExportAPI.cpp  JsonHelper.hpp  LLPermission.cpp  LLPermission.h  Mod.cpp  Mod.h  PermissionAPI.h  Resource.rc  dllmain.cpp  pch.h
src/data/: Foundation.hpp
